@@ -1,4 +1,4 @@
 DIST fontcacheproto-0.1.2.tar.bz2 38233 RMD160 8873d1dd45a39c42e44d7f3f7e6bd779ee40462b SHA1 6a531ef505ba2f7c1aa884bb4efdac3e32dfd99b SHA256 48063ed49b200927376645f9ffe65faa39af84d59ba6f60f2abb2f9c6fa3d9f9
-EBUILD fontcacheproto-0.1.2.ebuild 541 RMD160 c23ab92a3f2c5f86b2dcadaeec00277b6953f177 SHA1 ee18aa7384978cff1d74f9c379662c23f4483c0d SHA256 bf83372d849f1d4b66d339de0406f3c08779a0e491e2c9458780e4c103b340d6
-MISC ChangeLog 3718 RMD160 562e11b424681120685fb9b46d12f24bf6ed6c27 SHA1 cf2b9e91615ef766008a1c358312b37f0e8e8e83 SHA256 99c61390cb58e118bbbf82b5669bf6d95af4a01eb9fd05b309e73a982d3fb64e
+EBUILD fontcacheproto-0.1.2.ebuild 540 RMD160 e3a2fa169227384bb6bd29b66c7522bbc9115e76 SHA1 e8430faf96e437dabb9a20fbb46648cd604209ed SHA256 cb9fe264adef798e3f531c20f91f73fa39f88df1cee5daff3437f43dfc296666
+MISC ChangeLog 3820 RMD160 8b593543ea76841d7f8f681b9549d2961d3a3c23 SHA1 16f7f602b17eaabf31fc6e470a6469764aa4a556 SHA256 a66a2eb4b1b4396172176f37298a51b4f514fa7550460442228cf84a60eccf86
 MISC metadata.xml 156 RMD160 c1274bdccf57603d580de0075ba07a35b7509560 SHA1 6f78f604e3d079d39189b40aaaa1ddb06182ad91 SHA256 5101ab0d4cc8c7125eea733c44e86962769bd77acaf53b69223b9cadcdd29055
