@@ -1,6 +1,10 @@
 # ChangeLog for x11-proto/fontcacheproto
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-proto/fontcacheproto/ChangeLog,v 1.30 2007/02/04 18:08:36 joshuabaergen Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-proto/fontcacheproto/ChangeLog,v 1.31 2009/05/05 15:09:00 fauli Exp $
+
+  05 May 2009; Christian Faulhammer <fauli@gentoo.org>
+  fontcacheproto-0.1.2.ebuild:
+  fix repoman warnings
 
   04 Feb 2007; Joshua Baergen <joshuabaergen@gentoo.org>
   fontcacheproto-0.1.2.ebuild:
